--- a/2-Collection.html
+++ b/2-Collection.html
@@ -13,50 +13,27 @@
 
 <body class="red lighten-5">
     <div class="container">
-    <h1 class="light green white-text">COLLECTION</h1>
-    <!-- Basic -->
-    <h4 class="purple white-text">Basic</h4>
-    <ul class="collection">
-    <li class="collection-item pink-text">Dress</li>
-    <li class="collection-item pink-text">Shirt</li>
-    <li class="collection-item pink-text">Jeans</li>
-    <li class="collection-item pink-text">Shoes</li>
-    </ul>
+        <h1 class="light green white-text">COLLECTION</h1>
+        <!-- Basic -->
+        <h4 class="purple white-text">Basic</h4>
+        <ul class="collection">
+            <li class="collection-item pink-text">Dress</li>
+            <li class="collection-item pink-text">Shirt</li>
+            <li class="collection-item pink-text">Jeans</li>
+            <li class="collection-item pink-text">Shoes</li>
+          </ul>
 
-    <!-- Links -->
-    <h4 class="purple white-text">Links</h4>
-    <div class="collection">
-    <a href="https://shopee.ph/" class="collection-item orange-text">Shopee</a>
-    <a href="https://www.lazada.com.ph/" class="collection-item blue active">Lazada</a>
-    <a href="https://www.zalora.com.ph/" class="collection-item black-text">Zalora</a>
-    <a href="https://ph.shein.com/" class="collection-item black-text active">Shein</a>
-</div>
+          <!-- Links -->
+          <h4 class="purple white-text">Links</h4>
+          <div class="collection">
+            <a href="#!" class="collection-item blue-text">Me</a>
+            <a href="#!" class="collection-item blue active">Myself</a>
+            <a href="#!" class="collection-item blue-text">And</a>
+            <a href="#!" class="collection-item green-darken-4-text active">I</a>
+          </div>
 
-    <!-- Fixed Action Button-->
-    <div class="fixed-action-btn">
-    <a href="" class="btn-floating btn-large orange">
-    <i class="large material-icons">mode_edit</i>
-    </a>
-    <ul>
-        
-      <li>
-        <a href="" class="btn-floating btn-large red"></a>
-        <a class="btn-floating red">
-            <i class="material-icons">insert_chart</i></a></li>
-        <li><a class="btn-floating yellow darken-1">
-            <i class="material-icons">format_quote</i></a></li>
-        <li><a class="btn-floating green">
-            <i class="material-icons">publish</i></a></li>
-        <li><a class="btn-floating blue">
-            <i class="material-icons">attach_file</i></a></li>
-    </ul>
-</div>
-
-
-      <!-- Compiled and minified JavaScript -->
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+<!-- Compiled and minified JavaScript -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 
 </div>
 </html>
-
-<div style="height: 400px;"></div>
