--- a/3-Grid.html
+++ b/3-Grid.html
@@ -13,10 +13,10 @@
 
     <title>Grid</title>
 </head>
-<body class="grey darken-4">
+<body class="white">
 
 <div class="container">
-    <h1 class="white-text">GRID SYSTEM</h1>
+    <h1 class="black-text">GRID SYSTEM</h1>
 
     <div class="row center">
     <div class="col s12 m4 l6 xl1 card-panel red accent-1 black-text">
@@ -275,8 +275,10 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     
     <script>
-    $(document).ready(function){
-    $('.materialboxed').materialbox();
+    $(document).ready(function(    
+    )
+    {
+    $('.materialboxed').materialbox
     });
     </script>
 
