--- a/Media.html
+++ b/Media.html
@@ -14,9 +14,21 @@
     <title>MEDIA</title>
 </head>
     <body class="grey darken-4">
-    <nav class="pink lighten-2">    
-    </nav>
-    
+        <div class="container">
+            <nav>
+             <div class="nav-wrapper">
+                <a class="left brand-logo">TASK</a>
+                <ul id="nav-mobile" class="right hide-on-med-and-down">
+                <li><a href="Index.html">Index</a></li>
+                <li><a href="Collection.html">Collection</a></li>
+                <li><a href="Grid.html">Grid</a></li>
+                <li><a href="Media.html">Media</a></li>
+                <li><a href="Slider.html">Slider</a></li>
+              </ul>
+            </div>
+          </nav>
+        </div>
+        </div>
     <!-- Material Box-->
     <div class="container">
         <h1 class="white-text">Media - (Materialbox)</h1>
