--- a/Collection.html
+++ b/Collection.html
@@ -15,8 +15,23 @@
 
 <body class="red lighten-5">
     <div class="container">
+        <nav>
+         <div class="nav-wrapper">
+            <a class="left brand-logo">TASK</a>
+            <ul id="nav-mobile" class="right hide-on-med-and-down">
+            <li><a href="Index.html">Index</a></li>
+            <li><a href="Collection.html">Collection</a></li>
+            <li><a href="Grid.html">Grid</a></li>
+            <li><a href="Media.html">Media</a></li>
+            <li><a href="Slider.html">Slider</a></li>
+          </ul>
+        </div>
+      </nav>
+    </div>
+    </div>
+    <div class="container">
     <h1 class="light green white-text">COLLECTION</h1>
-
+    
     <!-- Basic -->
     <h2 class="purple white-text">Basic</h2>
     <ul class="collection">
