--- a/Grid.html
+++ b/Grid.html
@@ -14,6 +14,21 @@
     <title>Grid</title>
 </head>
 <body class="white">
+    <div class="container">
+        <nav>
+         <div class="nav-wrapper">
+            <a class="left brand-logo">TASK</a>
+            <ul id="nav-mobile" class="right hide-on-med-and-down">
+            <li><a href="Index.html">Index</a></li>
+            <li><a href="Collection.html">Collection</a></li>
+            <li><a href="Grid.html">Grid</a></li>
+            <li><a href="Media.html">Media</a></li>
+            <li><a href="Slider.html">Slider</a></li>
+          </ul>
+        </div>
+      </nav>
+    </div>
+    </div>
 
 <div class="container">
     <h1 class="black-text">GRID SYSTEM</h1>
