--- a/Media.html
+++ b/Media.html
@@ -14,7 +14,7 @@
     <title>MEDIA</title>
 </head>
     <body class="grey darken-4">
-        <div class="container">
+        <div class="container black">
             <nav>
              <div class="nav-wrapper">
                 <a class="left brand-logo">TASK</a>
@@ -56,11 +56,6 @@
     
      <sript>
         
-        $(document).ready(function() {
-            $('.materialboxed').materialbox();
-        });
-
-
 
      </sript>
     </body>
