--- a/index (2).html
+++ b/index (2).html
@@ -86,6 +86,16 @@
             </div>
         </div>
 
+        
+<!--Try-->
+        <div class="col s12 m5 offset-13">
+            <br>
+            <br>
+            <br>
+            <p class="caption">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quos commodi, corrupti iusto non facere impedit. Veniam vel libero odio reprehenderit necessitatibus eaque corrupti repudiandae praesentium at soluta. Sint, quae ab?</p>
+          </div>
+    
+
 
     </div>
 
