--- a/index.html
+++ b/index.html
@@ -11,9 +11,23 @@
 
     <title>Hey There!</title>
 </head>
-
+<div class="container">
+    <nav>
+     <div class="nav-wrapper">
+        <a class="left brand-logo">TASK</a>
+        <ul id="nav-mobile" class="right hide-on-med-and-down">
+        <li><a href="Index.html">Index</a></li>
+        <li><a href="Collection.html">Collection</a></li>
+        <li><a href="Grid.html">Grid</a></li>
+        <li><a href="Media.html">Media</a></li>
+        <li><a href="Slider.html">Slider</a></li>
+      </ul>
+    </div>
+  </nav>
+</div>
+</div>
     <div class="container">
-        <h1 class="brown-text , center-align" >HELLO WORLD</h1>
+        <h1 class="black-text , center-align" >HELLO WORLD</h1>
         <h2>Fighting!</h2>
         <h3>Fighting!</h3>
         <h4>Fighting!</h4>
