--- a/Collection.html
+++ b/Collection.html
@@ -24,6 +24,7 @@
             <li><a href="Grid.html">Grid</a></li>
             <li><a href="Media.html">Media</a></li>
             <li><a href="Slider.html">Slider</a></li>
+            <li><a href="Sample-Website.html">Final Website</a></li>
             <li><a href="FINAL-WEBSITE/">Final Website</a></li>
           </ul>
         </div>
