--- a/Slider.html
+++ b/Slider.html
@@ -22,7 +22,7 @@
             <li><a href="Grid.html">Grid</a></li>
             <li><a href="Media.html">Media</a></li>
             <li><a href="Slider.html">Slider</a></li>
-            <li><a href="Sample-Website.html">Sample Wedsite</a></li>
+            <li><a href="Sample-Website.html">Sample Website</a></li>
             <li><a href="FINAL-WEBSITE/">Final Website</a></li>
           </ul>
         </div>
