--- a/MyWebsite.HTML
+++ b/MyWebsite.HTML
@@ -99,12 +99,30 @@
             </div>
           </header>
 
+          <div >
+
+
+          </div>
+
+          <!-- Parallax-->
+          <div class="parallax-container">
+            <div class="parallax"><img src="Final-Image/bbg.jpg"></div>
+          </div>
+          <div class="section white">
+            <div class="row container">
+              <h2 class="header">Parallax</h2>
+              <p class="grey-text text-darken-3 lighten-3">Parallax is an effect where the background content or image in this case, is moved at a different speed than the foreground content while scrolling.</p>
+            </div>
+          </div>
+          <div class="parallax-container">
+            <div class="parallax"><img src="images/parallax2.jpg"></div>
+          </div>
 
    <!-- Card-->
      <div class="row">
         <div class="col s1 m3 offset-m14">
           <div class="card small">
-            <div class="card-image">
+            <div class="card-image"></div>
               <img src="Final-Image/HTown.jpg">
               <span class="card-title"></span></div>
               <div class="card-content">
@@ -147,8 +165,6 @@
       </div>
 
       
-      
-
 
       <!-- Jquery CDN-->
       <script src="https://code.jquery.com/jquery-3.6.3.min.js" 
