--- a/Collection.html
+++ b/Collection.html
@@ -25,7 +25,7 @@
             <li><a href="Media.html">Media</a></li>
             <li><a href="Slider.html">Slider</a></li>
             <li><a href="Sample-Website.html">Sample Website</a></li>
-            <li><a href="FINAL-WEBSITE/">Final Website</a></li>
+            <li><a href="MyWebsite.html">My Website</a></li>
           </ul>
         </div>
       </nav>
