--- a/Sample-Website.html
+++ b/Sample-Website.html
@@ -23,19 +23,18 @@
     <nav class="transparent">
         <div class="container">
             <div class="nav-wrapper">
-            <a href="index (2).html" class="brand-logo center">Alas</a>
             <a href="#" data-target="slide-out" class="sidenav-trigger">
                 <i class="material-icons">menu</i></a>
             <ul class="right hide-on-med-and-down">
                 <li class="active">
-                <a href="index (2).html">Home</a>
+                <a href="index (2).html" class="black-text">Home</a>
             </li>
             <li>
-                <a href="solutions.html">Solutions
+                <a href="solutions.html" class="black-text">Solutions
             </a>
             </li>
             <li>
-                <a href="signup.html">Sign Up</a>
+                <a href="signup.html" class="black-text">Sign Up</a>
             </li>
             <li>
                 <a href="" class="btn purple">Login</a>
@@ -43,6 +42,15 @@
             </ul>
         </div>
         </div> 
+
+        <ul id="nav-mobile" class="left hide-on-med-and-down">
+            <li><a href="Index.html" class="black-text">Index</a></li>
+            <li><a href="Collection.html" class="black-text">Collection</a></li>
+            <li><a href="Grid.html" class="black-text">Grid</a></li>
+            <li><a href="Media.html" class="black-text">Media</a></li>
+            <li><a href="Slider.html" class="black-text">Slider</a></li>
+            <li><a href="Sample-Website.html" class="black-text">Sample Website</a></li>
+            <li><a href="MyWebsite.html" class="black-text">My Website</a></li>
     </nav>
 
     <!-- Showcase-->
