--- a/MyWebsite.HTML
+++ b/MyWebsite.HTML
@@ -101,10 +101,9 @@
           <div >
           </div>
 
-
    <!-- Card-->
      <div class="row">
-        <div class="col s1 m3 offset-m14">
+        <div class="col s12 m3 offset-m20">
           <div class="card small">
             <div class="card-image">
               <img src="Final-Image/HTown.jpg">
@@ -112,12 +111,14 @@
               <div class="card-content">
               <p>Hometown</p></div>
               <div class="card-action black">
-              <a href="https://www.travalour.com/destination/1686-eastern-visayas">More...</a>
+              <a href="https://www.travalour.com/destination/1686-eastern-visayas">More...</a> 
             </div>
           </div>
+        </div>
           </div>
         </div>
       </div>
+      
     
       <div class="row">
         <div class="col s2 m3 offset-m16">
