--- a/MyWebsite.HTML
+++ b/MyWebsite.HTML
@@ -17,30 +17,32 @@
     <title>Starlight</title>
 </head>
 <body>
+
    <!-- Header-->
    <header class="main-header">
-      <a href="#" data-target="slide-out" class="sidenav-trigger left"><i class="material-icons medium">menu</i></a>
-      
-      <nav class="blue-grey darken-4">
-        <div class="container">
+      <a href="#" data-target="slide-out" class="sidenav-trigger left"><i class="material-icons medium">menu</i>
+        <nav class="blue-grey darken-4">
+         <div class="container">
             <div class="nav-wrapper">
-            <a href="#" data-target="slide-out" class="sidenav-trigger">
-                <i class="material-icons">menu</i></a>
-            <ul class="right hide-on-med-and-down">
-                <li class="active">
-                <a href="INDEX.HTML">Home</a>
-            </li>
-            <li>
-                <a href="about.html">About</a>
-            </li>
-            <li>
-                <a href="signup.html">Sign Up</a>
-            </li>
-            <li>
-                <a href="" class="btn pink darken-4">Login</a>
-                </li>
-            </ul>
-        </div>
+              <a href="#" data-target="slide-out" class="sidenav-trigger">
+                <i class="material-icons">menu</i>
+                 <ul class="right hide-on-med-and-down">
+                  <li class="active">
+                    <a href="INDEX.HTML">Home</a>
+                  </li>
+                  <li>
+                    <a href="about.html">About</a>
+                  </li>
+                  <li>
+                    <a href="signup.html">Sign Up</a>
+                  </li>
+                  <li>
+                    <a href="" class="btn pink darken-4">Login</a>
+                  </li>
+                </ul>
+              </a>
+            </a>
+          </div>
         </div> 
     </nav>
     
