--- a/Sample-Website.html
+++ b/Sample-Website.html
@@ -50,7 +50,7 @@
             <li><a href="Media.html" class="black-text">Media</a></li>
             <li><a href="Slider.html" class="black-text">Slider</a></li>
             <li><a href="Sample-Website.html" class="black-text">Sample Website</a></li>
-            <li><a href="MyWebsite.html" class="black-text">My Website</a></li>
+            <li><a href="MY-WEBSITE/MyWebsite.html">My Website</a></li>
     </nav>
 
     <!-- Showcase-->
