--- a/MY-WEBSITE/MyWebsite.html
+++ b/MY-WEBSITE/MyWebsite.html
@@ -199,12 +199,12 @@
 
 
       <div class="card-panel teal accent-2">
-        <h5  Class="orange-text center">Join Starlight Now!</h5>
-
-      </div>
-
-
-        
+        <h5  Class="pink-text text-accent-3 center">Join Starlight Now!</h5>
+        <div class="container"> 
+          <div class="row">
+            <div class="col s2 push-s5 card-panel white center">
+              <a href="https://accounts.google.com/" class="grey-text">Email</a>
+                 
 
       <!-- Jquery CDN-->
       <script src="https://code.jquery.com/jquery-3.6.3.min.js" 
